--- a/index.html
+++ b/index.html
@@ -2,12 +2,22 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>TI-84 Calculator</title>
-    <script src="path/to/your/hosted/secondPriorityLibs.bundle.js"></script>
+    <!-- Replace 'your-username' and 'your-repo' with your GitHub username and repository name -->
+    <script src="https://sborish.github.io/ti84/secondPriorityLibs.bundle.js"></script>
+    <style>
+        #calculator-container {
+            width: 300px;
+            height: 500px;
+            border: 1px solid #000;
+            padding: 10px;
+        }
+    </style>
 </head>
 <body>
     <div id="calculator-container">
-        <!-- Calculator UI elements will go here -->
+        <!-- Calculator UI elements will be generated here -->
     </div>
 
     <script>
